# LendAndForget-Backend

./: .env.example  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements-dev.txt
apps/authorization/: models.py  serializers.py  urls.py  utils.py  views.py
apps/authorization/migrations/: 0001_initial.py
apps/authorization/templates/: email.html  email.txt
apps/lendapp/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/lendapp/migrations/: 0001_initial.py  0002_auto_20210409_2303.py  0002_contact.py  0002_notification.py  0003_loan_image.py  0003_notification.py  0004_auto_20210410_1408.py  0004_auto_20210507_1721.py
endpoints/authorization/: email_verify.md  login.md  register.md  token_refresh.md  user_manage.md
endpoints/lendapp/: all_notifications_mark_seen.md  category.md  contact.md  create_item_reminder.md  create_money_reminder.md  delete_all_notifications.md  delete_notifications.md  item_loan.md  item_return.md  loan_status.md  money_loan.md  money_return.md  notifications.md  notifications_mark_seen.md  request_item_longer_time.md  request_item_return.md  request_money_longer_time.md  request_money_return.md
lend_and_forget/: asgi.py  settings.py  urls.py  wsgi.py
